--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <div class="col-md-3"></div>
   </div>
  </div>
-        <img src="assets/img/markzukerberg.jpg" height="70%" width="50%">
+        <img src="assets/img/markzukerberg.jpg" height="70%" width="40%">
         <div class="row">
     <div class="eduardoluissaverin">
         <div class="col-md-2"></div>
@@ -56,6 +56,7 @@
 <div class="col-md-2"></div>
    </div>
   </div>
+        <img src="assets/img/saverin.jpg" height="70%" width="45%">
         <div class="row">
         <div class="andrewmccollum">
             <div class="col-md-1"></div>
@@ -79,6 +80,7 @@
 <div class="col-md-1"></div>
    </div>
   </div>
+        <img src="assets/img/andrewmccollum.jpg" height="70%" width="45%">
         <div class="row">
         <div class="dustinmoskovits">
             <div class="col-md-3"></div>
@@ -106,5 +108,6 @@
 <script src="assets/js/bootstrap.min.js"></script>
 <script src="assets/js/jquery-3.5.1.min.js"></script>
 <script src="assets/js/popper.min.js"></script>
+        <img src="assets/img/dustin.jpg" height="70%" width="40%">
  </body>
 </html>
