--- a/index.html
+++ b/index.html
@@ -1,18 +1,33 @@
 <html>
 <head>
-    <title>FaceBook</title>
+   <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+<!--css files-->
     <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="assets/css/main.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/main.">
+    <title>FaceBook</title>
     </head>
-    <body>
-    <div class="container">
-    <header>
+<body>
+<div class="container">
+<!--space-->
+<div class="row">
+<br>
+</div>
+<!--header-->
+<div class="row">
+<header>
     <h1>FaceBook</h1>
     </header>
-        <div class="row">
-        <div class="markeliotzukerberg">
-            <div class="col-md-3"></div>
-            <div class="col-md-6">
+</div>
+<!--space-->
+<div class="row">
+<br>
+</div>
+<!--Mark Eliot Zukerberg-->
+<div class="row">
+   <div class="col-md-1"></div>
+   <div class="col-md-6">
     <h3>Mark Eliot Zukerberg</h3>
     <p>
     <em>
@@ -25,18 +40,39 @@
     He went to Harvard University
     His mothers name is Karen Zukerberg.
     And his fathers name is Edward Zukerberg.
-    His siters name is Lauren mallian, He also has another sister am too lazy to make another sentence.  
+    His siters name is Lauren mallian, He also has another sister am too lazy to make another sentence.
+    Mark Elliot Zuckerberg is an American media magnate.
+    A magnate is a wealthy and influential businessman or businesswoman. He is also an internet entrepreneur. 
+    He is lastly a philanthropist.
+    He is known for co-founding Facebook, Inc.
+    And serves as its chairman.
+    And also chief executive officer for short <strong> C. E. O. </strong>
+    He is also and the controlling shareholder.
+    He also is a co-founder of the solar sail spacecraft development project Breakthrough Starshot.
+    And serves as one of its board members.
+    He helped found face book.
+    Where he helped found FaceBook is:
+    Harvard University.
+    One of his college roomates is Eduardo Saverin
+    The Second one is Andrew Mc Collum.
+    The third one is Dustin Moskovitz.
+    The fourth one is Chris huges.
      </em>
     </p>
    </div>
-<div class="col-md-3"></div>
-  </div>
+   <div class="col-md-4">
+<img src="assets/img/markzukerberg.jpg" height="" width="100%">
+   </div>
+   <div class="col-md-1"></div>
  </div>
-        <img src="assets/img/markzukerberg.jpg" height="70%" width="40%">
-        <div class="row">
-    <div class="eduardoluissaverin">
-        <div class="col-md-2"></div>
-        <div class="col-md-8">
+<!--space-->
+<div class="row">
+<br>
+</div>
+<!--Eduardo Luis Saverin-->
+<div class="row">
+    <div class="col-md-1"></div>
+    <div class="col-md-6">
     <h3>Eduardo Luis Saverin</h3>
     <p>
     <em>
@@ -50,17 +86,32 @@
     He also went to Gulliver schools.
     He got Citizenship in Singapore.
     His family later moved to Rio de Janeiro.
+    Eduardo Luiz Saverin is a Brazilian entrepreneur.
+    And an angel investor.
+    Saverin is one of the co-founders of Facebook.
+    In 2012, he owned 53 million Facebook shares.
+    (approximately 2% of all outstanding shares)
+    Valued at approximately $2 billion at the time. 
+    He also invested in early-stage startups such as Qwiki.
+    And Jumio.
+    He has invested in Jumio.
+    Saverin renounced his U.S. citizenship in September 2011.
       </em>
      </p>
     </div>
-<div class="col-md-2"></div>
-   </div>
+    <div class="col-md-4">
+<img src="assets/img/saverin.jpg" height="" width="100%">
+</div>
+    <div class="col-md-1"></div>
   </div>
-        <img src="assets/img/saverin.jpg" height="70%" width="45%">
-        <div class="row">
-        <div class="andrewmccollum">
-            <div class="col-md-1"></div>
-            <div class="col-md-10">
+<!--space-->
+<div class="row">
+<br>
+</div>
+<!--Andrew McCollum-->
+<div class="row">
+    <div class="col-md-1"></div>
+    <div class="col-md-6">
     <h3>Andrew McCollum</h3>
     <p>
     <em>
@@ -74,18 +125,35 @@
     California is in the United States.
     His fathers name is David McCollum.
     His mothers name is Sally McCollum.
+    Andrew McCollum is an American angel investor.
+    He was born 4 September 1983.
+    And his a businessman.
+    McCollum is a co-founder of Facebook and current CEO of Philo.
+    He attended Harvard University.
+    With co-founder Mark Zuckerberg.
+    And others on the founding team.
+    Such As:
+    He co-founded with Mark Eliot Zukerberg.
+    He co-founded with Eduardo Luis Saverin.
+    He co-founded with Dustin Aaron Moskovits.
+    He co-founded with Chris Hughes.
       </em>
      </p>
     </div>
-<div class="col-md-1"></div>
-   </div>
+    <div class="col-md-4">
+<img src="assets/img/andrewmccollum.jpg" height="" width="100%">
+    </div>
+    <div class="col-md-1"></div>
   </div>
-        <img src="assets/img/andrewmccollum.jpg" height="70%" width="45%">
-        <div class="row">
-        <div class="dustinmoskovits">
-            <div class="col-md-3"></div>
-            <div class="col-md-6">
-    <h3>Dustin Moskovits.</h3>
+<!--space-->
+<div class="row">
+<br>
+</div>
+<!--Dustin Aaron Moskovits.-->
+<div class="row">
+    <div class="col-md-1"></div>
+    <div class="col-md-6">
+    <h3>Dustin Aaron Moskovits.</h3>
     <p>
     <em>
     His full name is Dustin Aaron Moskovits.
@@ -98,16 +166,30 @@
     Which is in United States.
     He went to Harvard university.
     And he went to Vaguard High School.
+    Dustin Aaron Moskovitz is an American Internet entrepreneur
+    Who co-founded Facebook with Mark Zuckerberg.
+    He also co-founded with Eduardo Saverin.
+    He also co-founded with Andrew McCollum.
+    And he also co-founded with Chris Hughes.
+    In 2008 He left Facebook to co-found Asana
+    With Justin Rosenstein.
+    In March 2011, Forbes reported Moskovitz to be the youngest self-made billionaire in history.
+    On the basis of his 2.34% share in Facebook.
+    Moskovitz was born in Gainesville.
+    Florida and grew up in Ocala, Florida.
        </em>
       </p>
      </div>
-    <div class="col-md-3"></div>
+    <div class="col-md-4">
+<img src="assets/img/dustin.jpg" height="" width="100%">
     </div>
+    <div class="col-md-1"></div>
+    </div>
+<!--space-->
+<div class="row">
+<br>
+</div>
    </div>
-  </div>
-<script src="assets/js/bootstrap.min.js"></script>
-<script src="assets/js/jquery-3.5.1.min.js"></script>
-<script src="assets/js/popper.min.js"></script>
-        <img src="assets/img/dustin.jpg" height="70%" width="40%">
+<script src="assets/js/bootstrap.bundle.min.js"></script>
  </body>
 </html>
